test/sema/member_expr_invalid_member.dmz
// RUN: (dmz %s -res-dump 2>&1 || true) | filecheck %s
struct Struct {
    x: i32,
}

fn main() -> void {
    let s = Struct{x: 0};

    let y = s.y;
    // CHECK: [[# @LINE - 1 ]]:14: error: struct 'Struct{}' has no member called 'y'
}